<resources>
    <string name="app_name">Truyện CV</string>

<!--    Login + Register-->
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="back">Quay lại</string>

    <!--    Fragment Story-->
    <!--    Story Item-->
    <string name="name_story">Tên truyện</string>
    <string name="text1">Tác giả:</string>
    <string name="text2">Tuổi:</string>
    <string name="text3">Trạng thái:</string>
    <string name="text4">Chương:</string>
    <string name="text5">Thể loại:</string>

    <!--    Story Search-->
    <string name="search">Tìm kiếm</string>

    <!--    Story Interface-->
    <string name="rate">Đánh giá</string>
    <string name="delete_rate">Xóa đánh giá</string>
    <string name="like">Yêu thích</string>
    <string name="view">Lượt xem</string>
    <string name="chapter">Chương</string>
    <string name="comment">Bình luận</string>
    <string name="story_read">Đọc truyện</string>

<!--    Fragment Filter-->
    <string name="story_filter">Lọc truyện</string>
    <string name="all">Tất cả</string>
    <string name="text10">Đang ra</string>
    <string name="text11">Hoàn thành</string>
    <string name="text14">Đô thị</string>
    <string name="text15">Tu tiên</string>
    <string name="text16">Huyền huyễn</string>
    <string name="text17">Trùng sinh</string>
    <string name="text18">Ngôn tình</string>

<!--    Fragment Download-->
    <string name="story_download">Truyện tải về</string>
    <!--    Dialog Story Download-->
    <string name="btReadStory">-> Đọc truyện</string>

<!--   Fragment Account-->
    <!--    Account Update-->
    <string name="account_information">Thông tin tài khoản</string>
    <string name="save">Lưu</string>

    <!--    Guide-->
    <string name="guide">Hướng dẫn sử dụng</string>
    <string name="gtext1">Để chỉnh lại cỡ chữ, giãn dòng, màu chữ và màu nền, bạn cần thực hiện các bước sau:\nB1: Vào đọc bất kỳ 1 truyện nào đó.\n Sau đó, chạm vào giữa màn hình, thanh menu sẽ hiện lên.</string>
    <string name="gtext2">B2: Chọn nút cài đặt trên thanh menu.</string>
    <string name="gtext3">B3: Đổi cỡ chữ, giãn dòng, màu chữ, màu nền theo sở thích.</string>
    <string name="gtext4">Hướng dẫn sử dụng</string>


    <!--    Dev Information-->
    <string name="dev_information1">Thông tin nhà phát triển</string>
    <string name="dev_information2">Thông tin sinh viên</string>
    <string name="dev_university">Đại học Xây dựng (HUCE)</string>
    <string name="dev_majors">Khoa Công nghệ thông tin</string>
    <string name="text33">Họ và Tên:</string>
    <string name="dev_name">Nguyễn Huy Tiến</string>
    <string name="text35">Lớp:</string>
    <string name="dev_class">63IT3</string>
    <string name="text36">MSSV:</string>
    <string name="dev_studentID">204763</string>
    <string name="text37">SĐT:</string>
    <string name="dev_phone">0898727647</string>
    <string name="text38">Email:</string>
    <string name="dev_email">tien1932nd@gmail.com</string>

    <!--    Log Out-->
    <string name="btLogOut">Đăng xuất</string>

<!--    Chapter Read-->
    <string name="poster">Người đăng:</string>
    <string name="post_day">Ngày đăng:</string>

<!--    Dialog Setting-->
    <string name="aa">Aa</string>
    <string name="font_size">Cỡ chữ</string>
    <string name="line_stretch">Dán dòng</string>

<!--    Dialog Setting Color-->
    <string name="text_color">Màu chữ</string>
    <string name="background_color">Màu nền</string>
    <string name="btUse">Sử dụng</string>

<!--    Dialog Comment Update Delete-->
    <string name="btUpdate">-> Sửa</string>
    <string name="btDelete">-> Xóa</string>

<!--    Dialog Notify Yes No-->
    <string name="yes">Có</string>
    <string name="no">Không</string>

<!--    Bottom Navigation Main-->
    <string name="btMenuStory">Truyện</string>
    <string name="btMenuFilter">Lọc</string>
    <string name="btMenuFollow">Theo dõi</string>
    <string name="btMenuDownload">Tải truyện</string>
    <string name="btMenuAccount">Tài khoản</string>

<!--    Hint-->
    <string name="hint0">Tên hiển thị</string>
    <string name="hint1">Email</string>
    <string name="hint2">Tài khoản</string>
    <string name="hint3">Mật khẩu</string>
    <string name="hint4">Nhập lại mật khẩu</string>
    <string name="hint5">Mật khẩu hiện tại</string>
    <string name="hint6">Mật khẩu mới</string>
    <string name="hint_date">yyyy-mm-dd</string>
    <string name="hint_search_story">Nhập tên truyện cần tìm</string>
    <string name="hint_search_chapter">Nhập chương cần tìm</string>
    <string name="hint_rate">Đánh giá của bạn sẽ giúp những độc giả sau tham khảo truyện trước khi đọc.</string>

<!--    Button-->
    <string name="destroy">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="reload">Tải lại</string>

</resources>