<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/dev_information2"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl" />

    <TextView
        android:id="@+id/tvUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dev_university"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl" />

    <TextView
        android:id="@+id/tvMajors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dev_majors"
        android:textColor="@color/blue"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUniversity" />

    <ImageView
        android:id="@+id/ivHUCE"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:padding="1dp"
        android:src="@drawable/huce"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMajors"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/text33"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHUCE" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/dev_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvname"
        app:layout_constraintTop_toBottomOf="@+id/ivHUCE" />

    <TextView
        android:id="@+id/tvClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text35"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_class"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvClass"
        app:layout_constraintTop_toBottomOf="@+id/tvname" />

    <TextView
        android:id="@+id/tvStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text36"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_studentID"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvStudentID"
        app:layout_constraintTop_toBottomOf="@+id/tvClass" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text37"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_phone"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintLeft_toRightOf="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentID" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text38"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>