<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/account_login_margin_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NameApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alger"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/account_login_title_size" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_login_edit_text_height"
            android:layout_marginTop="@dimen/account_login_margin_top_to_title"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="5dp"
            android:hint="@string/hint1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_login_text_size" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_login_edit_text_height"
            android:layout_marginTop="@dimen/account_login_edit_text_margin_top"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/hint2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_login_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="@dimen/account_login_button_save_width"
                android:layout_height="@dimen/account_login_button_save_height"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_corner_no_color_10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btCreate"
                android:layout_width="@dimen/account_login_button_save_width"
                android:layout_height="@dimen/account_login_button_save_height"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_corner_no_color_10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>