<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/account_login_margin_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alger"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/account_register_title_size" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_register_edit_text_height"
            android:layout_marginTop="@dimen/account_register_margin_top_to_title"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_display_name"
            android:drawablePadding="5dp"
            android:hint="@string/hint0"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_register_text_size" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_register_edit_text_height"
            android:layout_marginTop="@dimen/account_register_edit_text_margin_top"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/hint1"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_register_text_size" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_register_edit_text_height"
            android:layout_marginTop="@dimen/account_register_edit_text_margin_top"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_account"
            android:hint="@string/hint2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_register_text_size" />

        <EditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_register_edit_text_height"
            android:layout_marginTop="@dimen/account_register_edit_text_margin_top"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/hint3"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_register_text_size" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_register_edit_text_height"
            android:layout_marginTop="@dimen/account_register_edit_text_margin_top"
            android:backgroundTint="@color/silver"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/hint4"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/account_register_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/account_register_edit_text_margin_top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/account_register_edit_text_height"
                android:layout_marginEnd="@dimen/account_register_edit_text_height"
                android:backgroundTint="@color/silver"
                android:drawableStart="@drawable/ic_cake"
                android:drawablePadding="5dp"
                android:hint="@string/hint_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="@dimen/account_register_text_size" />

            <ImageView
                android:id="@+id/ivDate"
                android:layout_width="@dimen/account_register_edit_text_height"
                android:layout_height="@dimen/account_register_edit_text_height"
                android:layout_marginStart="-45dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_date" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/btExit"
                android:layout_width="@dimen/account_register_button_width"
                android:layout_height="@dimen/account_register_button_height"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_corner_no_color_10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/account_register_text_size" />

            <Button
                android:id="@+id/btRegister"
                android:layout_width="@dimen/account_register_button_width"
                android:layout_height="@dimen/account_register_button_height"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_corner_no_color_10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/account_register_text_size" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>