<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/tvStoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/alger"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_display_name"
        android:drawablePadding="5dp"
        android:hint="@string/hint0"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/hint1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/hint2"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/hint3"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/hint4"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1" />

    <EditText
        android:id="@+id/etBirthday"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:backgroundTint="@color/silver"
        android:drawableStart="@drawable/ic_cake"
        android:drawablePadding="5dp"
        android:hint="@string/hint_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />

    <ImageView
        android:id="@+id/ivDate"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_date"
        app:layout_constraintLeft_toRightOf="@+id/etBirthday"
        app:layout_constraintTop_toBottomOf="@+id/etPassword2"
        tools:ignore="contentDescription" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_corner_no_color_10dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthday" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/bg_corner_no_color_10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthday" />

</androidx.constraintlayout.widget.ConstraintLayout>