<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/medium_sea_green"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:text="@string/comment"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/btUpdate"
            android:textSize="17dp"
            android:textStyle="normal"
            android:textColor="@color/white_smoke"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/btDelete"
            android:textSize="17dp"
            android:textStyle="normal"
            android:textColor="@color/white_smoke"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>